testsuite/tests/dependent/should_fail/T15825.stderr

T15825.hs:14:10: error:
    • Cannot generalise type; skolem ‘k’ would escape its scope
      if I tried to quantify (x0 :: k) in this type:
        forall k (a :: C k). X (a @x0)
      (Indeed, I sometimes struggle even printing this correctly,
       due to its ill-scoped nature.)
    • In the instance declaration for ‘X (a :: *)’
